[tool.poetry]
name = "contracts"
version = "0.1.0"
description = ""
authors = ["Roshan Raghupathy <thisisroshansmail@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
slither-analyzer = "^0.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
